# physical-homepage

./: .clever.json  README.md  devloop.js  physical-homepage.cabal  post-deploy.sh  stack.yaml
app/: Evman.hs  Main.hs  Model.hs  Projects.hs  Talks.hs
app/Views/: Layout.hs  MainPage.hs  TalksPage.hs
assets/: static.html  style.css
clevercloud/: haskell.json
