name:                physical-homepage
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/divarvel/physical-homepage#readme
author:              Clément Delafargue
maintainer:          clement@delafargue.name
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable spock-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts="-T -N"
  build-depends:       base
                     , blaze-html
                     , containers
                     , ekg-core
                     , ekg-statsd
                     , mtl
                     , scotty
                     , text
                     , wai-middleware-metrics
                     , wai-middleware-static
  default-language:    Haskell2010
  other-modules:       Model
                     , Views.Layout
                     , Views.MainPage

test-suite spock-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
